/*

Copyright 2017 Continusec Pty Ltd

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

*/

syntax = "proto3";

package com.continusec.keytransparency.api;
option go_package = "pb";

import "verifiabledatastructures/proto/api.proto";

service KeyTransparencyService {
    rpc MapVUFFetchMetadata ( MapVUFFetchMetadataRequest) returns (MapVUFFetchMetadataResponse) {}
    rpc MapVUFSetValue (MapVUFSetKeyRequest) returns (MapVUFSetKeyResponse) {}
    rpc MapVUFGetValue (MapVUFGetKeyRequest) returns (MapVUFGetKeyResponse) {}

    rpc MailToken (MailTokenRequest) returns (MailTokenResponse) {}
}

message MapVUFFetchMetadataRequest {}

message MapVUFFetchMetadataResponse {
    bytes vuf_public_key = 1; // the DER-encoded RSA Public Key used to verify the Verifiable Unpredictable Function
    bytes server_public_key = 2; // the DER-encoded EC Public Key used to sign every server response
}

message MailTokenRequest {
    string email = 1;
}

message MailTokenResponse {}

message MapVUFSetKeyRequest {
    bytes key = 1;
    bytes value = 2;
    string token = 3;
}

message MapVUFSetKeyResponse {
    com.continusec.verifiabledatastructures.api.MapSetValueResponse map_response = 1;
}

message MapVUFGetKeyRequest {
    bytes key = 1;
    int64 tree_size = 2;
}

message MapVUFGetKeyResponse {
    bytes vuf_result = 1;
    com.continusec.verifiabledatastructures.api.MapGetValueResponse map_response = 2;
}

message VersionedKeyData {
    int64 sequence = 1;
    int64 prior_tree_size = 2;
    bytes key = 3;
    bytes value = 4;
}
